Validate packaged libGDX LWJGL3 spike